# DS-Slam

./: .gitignore  M1_build_plan.md  PROGRESS.md  README.md  agents.md  requirements.txt
config/: default.yaml  local.yaml.example
config/profiles/: dev.yaml  portable.yaml
libs/onnxruntime/: GIT_COMMIT_ID
orbslam3/: .gitignore  CMakeLists.txt  build_cmake.bat  run_rgbd.bat
orbslam3/Examples/RGB-D/: rgbd_tum.cc
orbslam3/evaluation/: associate.py
orbslam3/include/: Map.h  System.h
orbslam3/include/pangolin/: pangolin.h
orbslam3/src/: System.cc  Tracking.cc  Viewer.cc
scripts/: 0_init_project.bat  1_install_cpp_deps.bat  2_download_data.bat  3_build_orbslam3.bat  4_run_test.bat  5_eval_ate.bat  associate.py  check_config.ps1  check_progress.ps1  config_loader.py  package_runtime.ps1  print_config.py  setup_python.bat
segmentation/python/: export_onnx.py  test_inference.py
segmentation/python/models/: __init__.py  dwr.py  lscd.py  uib.py
slam-system/: CMakeLists.txt  test_segmentator.cpp
slam-system/config/: runtime_config.schema.md
slam-system/include/: SemanticSegmentator.h
slam-system/src/: SemanticSegmentator.cpp
visualization/backend/: main.py
visualization/frontend/: index.html
